fix: header nav items visibility

--- a/src/app/_components/Button/index.module.scss
+++ b/src/app/_components/Button/index.module.scss
@@ -9,10 +9,10 @@
   display: inline-flex;
   padding: 12px 24px;
   font-family: inherit;
-  line-height: inherit;
+  line-height: inherit; 
   font-size: inherit;
   border-radius: 10px;
-  border: 1px solid black
+  border: 1px solid black;
 }
 
 .content {
